# atlas-engine

./: .gitignore  generate_tauri_icons.py  package-lock.json  package.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Canvas.module.css  Canvas.tsx  CommandBar.module.css  CommandBar.tsx  FileMenu.module.css  FileMenu.tsx  Inspector.module.css  Inspector.tsx  MapSymbols.tsx  NodeEditor.module.css  NodeEditor.tsx  NodeList.module.css  NodeList.tsx  SpatialInspector.module.css  SpatialInspector.tsx  StateSelector.module.css  StateSelector.tsx  Toolbar.module.css  Toolbar.tsx  Workbench.module.css  Workbench.tsx
apps/desktop/src/contexts/: AtlasContext.tsx
apps/desktop/src/hooks/: useTauriCommands.ts
plans/: ARCHITECTURE.md
